// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with description and no title 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-267 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-268 makeStyles-disableGutters-270 makeStyles-disablePadding-271 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-279"
      >
        <div
          class="makeStyles-title-275"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-276 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            />
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-277 css-1d1r5q-MuiFormHelperText-root"
          >
            title
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-274"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options Component div 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-141 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-142 makeStyles-disableGutters-144 makeStyles-disablePadding-145 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-153"
      >
        <div
          class="makeStyles-title-149"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-150 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-151 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-148"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options Component fieldset 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-155 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-156 makeStyles-disableGutters-158 makeStyles-disablePadding-159 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-167"
      >
        <div
          class="makeStyles-title-163"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-164 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-165 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-162"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options disableGutters false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-43 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-44 makeStyles-disableGutters-46 makeStyles-disablePadding-47 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-55"
      >
        <div
          class="makeStyles-title-51"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-52 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-53 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-50"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options disableGutters true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-29 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-30 makeStyles-disableGutters-32 makeStyles-disablePadding-33 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-41"
      >
        <div
          class="makeStyles-title-37"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-38 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-39 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-36 makeStyles-disableGutters-32"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options disableMargin false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-99 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-100 makeStyles-disableGutters-102 makeStyles-disablePadding-103 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-111"
      >
        <div
          class="makeStyles-title-107"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-108 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-109 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-106"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options disableMargin true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-85 makeStyles-disableMargin-87 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-86 makeStyles-disableGutters-88 makeStyles-disablePadding-89 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-97"
      >
        <div
          class="makeStyles-title-93"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-94 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-95 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-92"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options disablePadding false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-71 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-72 makeStyles-disableGutters-74 makeStyles-disablePadding-75 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-83"
      >
        <div
          class="makeStyles-title-79"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-80 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-81 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-78"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options disablePadding true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-57 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-58 makeStyles-disableGutters-60 makeStyles-disablePadding-61 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-69"
      >
        <div
          class="makeStyles-title-65"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-66 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-67 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-64 makeStyles-disablePadding-61"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options elevation 0 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-paper-169 css-ee20y-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-170 makeStyles-disableGutters-172 makeStyles-disablePadding-173 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-181"
      >
        <div
          class="makeStyles-title-177"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-178 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-179 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-176"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options elevation 1 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-183 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-184 makeStyles-disableGutters-186 makeStyles-disablePadding-187 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-195"
      >
        <div
          class="makeStyles-title-191"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-192 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-193 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-190"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options elevation 2 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 makeStyles-paper-197 css-1mbunh-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-198 makeStyles-disableGutters-200 makeStyles-disablePadding-201 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-209"
      >
        <div
          class="makeStyles-title-205"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-206 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-207 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-204"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options fullWidth false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-127 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-128 makeStyles-disableGutters-130 makeStyles-disablePadding-131 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-139"
      >
        <div
          class="makeStyles-title-135"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-136 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-137 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-134"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options fullWidth true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-113 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-114 makeStyles-disableGutters-116 makeStyles-disablePadding-117 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-125"
      >
        <div
          class="makeStyles-title-121"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-122 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-123 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-120"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options icon favorite 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-225 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-226 makeStyles-disableGutters-228 makeStyles-disablePadding-229 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-237"
      >
        <span
          aria-hidden="true"
          class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium makeStyles-icon-236 css-kp9ftd-MuiIcon-root"
        >
          favorite
        </span>
        <div
          class="makeStyles-title-233"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-234 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-235 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-232"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options icon person 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-211 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-212 makeStyles-disableGutters-214 makeStyles-disablePadding-215 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-223"
      >
        <span
          aria-hidden="true"
          class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium makeStyles-icon-222 css-kp9ftd-MuiIcon-root"
        >
          person
        </span>
        <div
          class="makeStyles-title-219"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-220 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-221 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-218"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options layout horizontal 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-1 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-2 makeStyles-disableGutters-4 makeStyles-disablePadding-5 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-13"
      >
        <div
          class="makeStyles-title-9"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-10 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-11 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-horizontal-7"
      />
    </div>
  </div>
</div>
`;

exports[`renders with form options layout vertical 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-15 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-16 makeStyles-disableGutters-18 makeStyles-disablePadding-19 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-27"
      >
        <div
          class="makeStyles-title-23"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-24 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-25 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-22"
      />
    </div>
  </div>
</div>
`;

exports[`renders with no title or description 1`] = `
<div>
  <div
    class="MuiFormGroup-root makeStyles-root-282 makeStyles-disableGutters-284 makeStyles-disablePadding-285 css-dmmspl-MuiFormGroup-root"
    component="div"
  >
    <div
      class="makeStyles-vertical-288"
    />
  </div>
</div>
`;

exports[`renders with title and description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-239 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-240 makeStyles-disableGutters-242 makeStyles-disablePadding-243 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-251"
      >
        <div
          class="makeStyles-title-247"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-248 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-249 css-1d1r5q-MuiFormHelperText-root"
          >
            description
          </p>
        </div>
      </div>
      <div
        class="makeStyles-vertical-246"
      />
    </div>
  </div>
</div>
`;

exports[`renders with title and no description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-paper-253 css-1ps6pg7-MuiPaper-root"
  >
    <div
      class="MuiFormGroup-root makeStyles-root-254 makeStyles-disableGutters-256 makeStyles-disablePadding-257 css-dmmspl-MuiFormGroup-root"
      component="div"
    >
      <div
        class="makeStyles-header-265"
      >
        <div
          class="makeStyles-title-261"
        >
          <label
            class="MuiFormLabel-root MuiFormLabel-colorPrimary makeStyles-formLabel-262 css-u4tvz2-MuiFormLabel-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              title
            </h6>
          </label>
          <p
            class="MuiFormHelperText-root makeStyles-formHelperText-263 css-1d1r5q-MuiFormHelperText-root"
          />
        </div>
      </div>
      <div
        class="makeStyles-vertical-260"
      />
    </div>
  </div>
</div>
`;
